0.50 - fixed sqlrserver-config script to return data for libsqlrserver
		rather than libsqlrconnection
	added test for SQLROWSETSIZE for odbc that doesn't define it

0.49 - fixed various issues that came up when cross-compiling
	fixed make uninstall to remove a few things that it missed
	fixed -pthread annoyance
	added -Werror to default build for most components
	fixed various issues revealed by -Werror
	added password encryption framework
	added rot,md5 and crypt password encryption plugins
	moved modules to libexec and removed the libsqlrelay_ prefix
	moved modules out of the connection directory and into their own
		directories under src
	reorganized code tree to compile faster
	updated clean targets in Makefiles to run faster
	fixed a bug that could cause problems when fetching from an output
		bind cursor under a very specific set of circumstances
	reorganized server code into libsqlrserver
	implemented the swisscomm log format as a plugin
	added dbHostName and dbIpAddress methods to the client API
	refactored authentication to remove a client-server round-trip
	replaced handoff="reconnect" with handoff="proxy" which uses
		listener-proxying to remove a client-server round-trip
	disabled nagle's algorithm for all sockets
	fixed a bug that could cause a hang if the db login failed
	updated reading of skip and fetch parameters not to rely on buffering
	refactored login error reporting
	fleshed out the ODBC driver significantly
	added docs for using SQL Relay from ODBC and JDBC
	refactored windows make.bat script

0.48 - integrated patches from Neowiz for:
		handling for oracle errors ora-01033, ora-02067 and ora-04068
		bind validation when using the statement cache
		optionally rejecting oracle queries with duplicate
			bind variables
		sqlrconnecton::setClientInfo/getClientInfo
		query logging
		separate authentication and response timeouts on the client-side
		environment variables for setting timeouts
		sqlrelay-level errors for exceeding various bounds