@@ -1,6 +1,7 @@
 0.50 - fixed sqlrserver-config script to return data for libsqlrserver
 		rather than libsqlrconnection
 	added test for SQLROWSETSIZE for odbc that doesn't define it
+	updated postgresql drop-in library enough to work with psycopg2
 
 0.49 - fixed various issues that came up when cross-compiling
 	fixed make uninstall to remove a few things that it missed
